--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@replit/database": "^2.0.0",
     "discord.js": "^12.4.1",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "mongoose": "^5.10.11",
     "path": "^0.12.7",
+    "quick.db": "^7.1.3",
     "wokcommands": "^1.0.1"
   }
 }
