--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "discord.js": "^12.4.1",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.11",
+    "ms": "^2.1.2",
     "path": "^0.12.7",
     "quick.db": "^7.1.3",
     "wokcommands": "^1.0.1"
